Bug 183142 - View source does not work on collapsed thread-nodes
Summary: View source does not work on collapsed thread-nodes
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.11.90
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-04 11:08 UTC by Patrick Stählin
Modified: 2009-05-15 22:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Stählin 2009-02-04 11:08:41 UTC
Version:            (using KDE 4.2.0)
Compiler:          gcc version 4.1.2 (Gentoo 4.1.2 p1.1)  
OS:                Linux
Installed from:    Gentoo Packages

The "View Source" entry in the context menu of the message-body is grayed out if a collapsed thread node is selected in the message-list. Thus there is no way to display the source of the currently displayed mail.

This only occurs if the node is collapsed before clicking on it (clicking on the expanded node and collapsing it afterwards works).

Expected behaviour (IMHO):

Show the source of the _displayed_ e-mail.
Comment 1 Jaime Torres 2009-02-13 13:28:05 UTC
Confirmed in kmail 1.11.90 (kde 4.2.62) from svn trunk r923448.
Comment 2 Szymon Stefanek 2009-03-10 15:27:13 UTC
SVN commit 937842 by stefanek:

The "View Source" and "Print" actions operate on
the currently selected visible message. Keep
them enabled even if the selection contains additional
hidden messages.

BUG: 183142
BUG: 185518




 M  +41 -3     kmmainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=937842
Comment 3 Szymon Stefanek 2009-03-13 19:16:17 UTC
SVN commit 939057 by stefanek:

Properly count visible messages when updating the
actions, also when the aggregation has no grouping.

Rename the "CurrentlyViewable" property to
"DisplayedWithParentsExpanded" to avoid collision with
the "Viewable" property inside Model, which is a subset.

BUG: 183142
BUG: 185518



 M  +1 -1      core/model.cpp  
 M  +36 -20    core/view.cpp  
 M  +7 -6      core/view.h  
 M  +1 -1      widget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=939057
Comment 4 Thomas McGuire 2009-03-18 10:22:34 UTC
SVN commit 940767 by tmcguire:

Backport r939057 by stefanek from trunk to the 4.2 branch:

Properly count visible messages when updating the
actions, also when the aggregation has no grouping.

Rename the "CurrentlyViewable" property to
"DisplayedWithParentsExpanded" to avoid collision with
the "Viewable" property inside Model, which is a subset.

CCBUG: 183142
CCBUG: 185518




 M  +1 -1      core/model.cpp  
 M  +36 -20    core/view.cpp  
 M  +7 -6      core/view.h  
 M  +1 -1      widget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=940767
Comment 5 Dario Andres 2009-05-15 22:23:43 UTC
@Szymon: was the first fix backported? Both bug 192370 and bug 190938 are the same (on 4.2.2/4.2.3). Thanks