The "View Source" and "Print" actions operate on the currently selected visible message. Keep them enabled even if the selection contains additional hidden messages.

BUG: 183142
BUG: 185518



svn path=/trunk/KDE/kdepim/; revision=937842